test/expected/declare_nmo_arrow_rk_pk.out
declare -> as non-member operator (reference to S) returning pointer to S
        ^
9: error: operator "->" can only be a member
